--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -45,7 +45,7 @@ button, .el-button {
     display: inline-block;
     padding: 10px 20px;
     color: #fff;
-    background-color: #3498db;
+    background-color: #5b94ba;
     border-radius: 5px;
     border: none;
     cursor: pointer;
